# zawarudo

./: .env.example  Cargo.toml  Procfile  Readme.md  docker-compose.yml
migrations/2020-02-12-042824_create_block/: down.sql  up.sql
src/: main.rs  server.rs
src/config/: default.rs  mod.rs
src/graphql/: mod.rs
src/handler/: graphql.rs  mod.rs  ping.rs
src/storage/: mod.rs  schema.rs
src/storage/domain/: block.rs
