[package]
name = "zawarudo"
version = "0.1.0"
authors = ["Ganesha Danu <ganeshadanu1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
dotenv = "0.15.0"
diesel = { version = "1.4.2", features = ["postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0.104"
serde_json  = "1.0.44"
juniper_rocket = "0.5.2"
serde_derive = "1.0.104"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "diesel_postgres_pool"]

[dependencies.juniper]
version = "0.14.2"
features = ["serde_json", "chrono"]
